--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-    position: fixed;
+    /*position: fixed;*/
     top: 0;
     width: 100%;
     height: 100px; /* Altezza dell'header */
@@ -32,6 +32,36 @@ header p {
     top: 50%; /* Metà della altezza dell'header */
     left: 50%; /* Metà della larghezza dell'header */
     transform: translate(-50%, -50%); /* Sposta di -50% della propria larghezza e altezza */
+}
+
+/*.back-button {
+    position: fixed;
+    top: 20px; !* Posizione dal bordo superiore *!
+    left: 20px; !* Posizione dal bordo sinistro *!
+    z-index: 1000; !* Assicura che il pulsante sia sopra gli altri elementi *!
+}*/
+/*.back-button {
+    position: absolute;
+    top: 50%; !* Posizione al centro verticale *!
+    left: 0; !* Posizione dal bordo sinistro *!
+    transform: translateY(-50%); !* Centra verticalmente il pulsante *!
+    background-color: transparent; !* Sfondo trasparente *!
+    border: none; !* Nessun bordo *!
+    color: white; !* Colore del testo *!
+    font-size: 18px; !* Dimensione del testo *!
+    cursor: pointer; !* Cambia il cursore al passaggio del mouse *!
+    z-index: 2; !* Assicura che il pulsante sia sopra il contenuto dell'header *!
+}*/
+.back-button {
+    position: relative;
+    top: -10px; /* Sposta il bottone 10px più in alto rispetto alla sua posizione originale */
+    left: 0;
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    z-index: 3;
 }
 
 .footer {
