inserimento opzioni per quesiti a risposta chiusa Work in Progress

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-    /*position: fixed;*/
+    position: fixed;
     top: 0;
     width: 100%;
     height: 100px; /* Altezza dell'header */
